syntax = "proto3";

package com.shengsiyuan.netty.proto;

option java_package = "com.shengsiyuan.netty.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {

  rpc GetRealNameByUsername(MyRequest) returns (MyResponse) {}

  //  客户端向服务端发送一个消息，服务端返回客户端一个迭代器
  rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}

  //客户端向服务端发送一个流式对象，服务端返回list
  rpc GetStudentWrapperByAges(stream StudentRequest) returns (StudentResponseList) {}

  //双向流的数据传递
  rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message MyRequest {

  string username = 1;
}

message MyResponse {

  string realName = 2;
}

message StudentRequest {

  int32 age = 1;
}

message StudentResponse {

  string name = 1;
  int32 age = 2;
  string city = 3;
}

message StudentResponseList {

  //集合
  repeated StudentResponse studentResponse = 1;
}

message StreamRequest {

  string request_info = 1;
}

message StreamResponse {

  string response_info = 1;
}